pushing to github

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -105,7 +105,7 @@
         <div class="container">
             <div class="row text-center wow fadeIn" data-wow-delay="0.4s" style="visibility: visible; animation-name: fadeIn; animation-delay: 0.4s;">
         
-                <div class="col-md-4 mb-5 pt-1">
+                <div class="col-md-4 mb-4">
                   
                   <div class="card card-body hoverable">
                     <i aria-hidden="true" class="fa fa-bookmark fa-3x mb-4"></i>
@@ -116,22 +116,22 @@
                 </div>
                 
                 
-                <div class="col-md-4 mb-5">
+                <div class="col-md-4 mb-4">
                   
                   <div class="card card-body hoverable">
                     <i aria-hidden="true" class="fa fa-book fa-3x mb-4"></i>
-                    <h5 class="feature-title mb-4">Our History</h5>
+                    <h4 class="feature-title mb-4">Our History</h4>
                     <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                   </div>
                   
                 </div>
                 
                 
-                <div class="col-md-4 mb-5">
+                <div class="col-md-4 mb-4">
                   
                   <div class="card card-body hoverable">
-                    <i aria-hidden="true" class="fa fa-bar-chart fa-3x mb-4"></i>
-                    <h5 class="feature-title mb-4">Our believes</h5>
+                    <i aria-hidden="true" class="fa fa-cog fa-3x mb-4"></i>
+                    <h4 class="feature-title mb-4">Our believes</h4>
                     <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                   </div>
                   
@@ -142,7 +142,7 @@
     </div>
 
     <!-- Meet our team -->
-    <div id="about-2" class="mid-padding">
+    <div id="about-3" class="mid-padding">
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 align-self-center">
