--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,3 +13,7 @@
         background-color: #4285F4;
     }
 }
+
+#about-2  {
+    background: url("../assets/images/fullbg-church.jpeg") no-repeat center center
+} 
