--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,12 @@
     background-color: #4285F4;
 }
 
+@media only screen and (max-width: 768px) {
+    .navbar {
+        background-color: rgba(66, 134, 244, 0.651);
+    }
+}
+
 .big-padding {
     padding: 120px 0;
 }
